[gd_scene load_steps=12 format=3 uid="uid://l1ftaodoo155"]

[ext_resource type="Script" path="res://Escenas/Menus/volSlider.gd" id="1_inrtd"]
[ext_resource type="Texture2D" uid="uid://c2ag2gigrqrt6" path="res://Sprites/Menu/Perilla.png" id="1_y3men"]
[ext_resource type="Texture2D" uid="uid://cvn7l37t04iv8" path="res://Sprites/Menu/SoundButton.png" id="2_40f2s"]
[ext_resource type="Texture2D" uid="uid://bulapexswe86r" path="res://Sprites/Menu/SoundDisabledButton.png" id="3_tl1lx"]
[ext_resource type="Texture2D" uid="uid://dln0jeo1dnku" path="res://Sprites/Menu/SoundButtonFocused.png" id="4_u15rg"]
[ext_resource type="Texture2D" uid="uid://bdlhuwod3fclm" path="res://Sprites/Menu/PerillaHighlight.png" id="6_cvv1m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_00sis"]
bg_color = Color(0.301961, 0.27451, 0.278431, 0.862745)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ubk74"]
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.921569, 0.807843, 0.611765, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.780392, 0.47451, 0.270588, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f0vxy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d1f2c"]

[sub_resource type="CanvasTexture" id="CanvasTexture_rtg3u"]

[node name="VolSlider" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -626.0
offset_bottom = -692.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
script = ExtResource("1_inrtd")

[node name="bus_name" type="Label" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_00sis")
text = "bus_name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="muteBtn" type="TextureButton" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_right = NodePath("../HSlider")
toggle_mode = true
texture_normal = ExtResource("2_40f2s")
texture_pressed = ExtResource("3_tl1lx")
texture_focused = ExtResource("4_u15rg")
ignore_texture_size = true
stretch_mode = 5

[node name="HSlider" type="HSlider" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 3.16
focus_neighbor_left = NodePath("../muteBtn")
theme_override_icons/grabber = ExtResource("1_y3men")
theme_override_icons/grabber_highlight = ExtResource("6_cvv1m")
theme_override_styles/slider = SubResource("StyleBoxFlat_ubk74")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_f0vxy")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_d1f2c")
max_value = 1.0
step = 0.05
value = 1.0

[node name="volEdit" type="SpinBox" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_icons/updown = SubResource("CanvasTexture_rtg3u")
step = 5.0
alignment = 1
select_all_on_focus = true

[connection signal="mouse_entered" from="muteBtn" to="." method="_on_mute_btn_mouse_entered"]
[connection signal="mouse_exited" from="muteBtn" to="." method="_on_mute_btn_mouse_exited"]
[connection signal="toggled" from="muteBtn" to="." method="_on_mute_btn_toggled"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="volEdit" to="." method="_on_vol_edit_value_changed"]
